--- a/Day1.html
+++ b/Day1.html
@@ -11,9 +11,16 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
     </style>
     <body>
+        <div class="container">
         <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align:center;"> Job Application Form</h1>
         <div class="center">
         <form>
@@ -38,6 +45,7 @@
             <input type="Reset" value="Reset">
            </label>
         </form>
+        </div>
         </div>
     </body>
 </html>
